@startuml
skinparam Shadowing false
skinparam DefaultFontName Arial
skinparam BackgroundColor white
skinparam ArrowColor #4B5563
skinparam ArrowFontSize 9
skinparam nodesep 110
skinparam ranksep 130

left to right direction
hide circle
title ERD-03 - Reservation và waiting list
caption Mô tả dữ liệu đặt chỗ, trạng thái chờ, gán bàn và ownership khách hàng trong booking flow.
skinparam linetype ortho
skinparam entity {
  BackgroundColor white
  BorderColor #374151
}

entity "reservations" as reservations {
  * reservation_id
    status
    deposit_status
    deposit_intent_status
    deposit_required_amount
    deposit_paid_amount
    discount_amount
}

entity "waiting_list" as waiting_list {
  * waiting_id
    user_id
    branch_id
    notified_by
    updated_by
    status
    customer_response_status
}

entity "users" as users {
  * user_id
    role_id
    current_tier_id
    privacy_anonymized_at
    created_at
    updated_at
    full_name
}

entity "branches" as branches {
  * branch_id
    branch_code
    business_hours
    closure_windows
    booking_policy
    currency
    created_at
}

entity "restaurant_tables" as restaurant_tables {
  * table_id
    branch_id
    template_id
    status
    price
    table_code
    created_at
}

entity "table_holds" as table_holds {
  * hold_id
    session_id
    hold_status
    user_id
    branch_id
    confirmed_reservation_id
    start_time
}

entity "customer_access_sessions" as customer_access_sessions {
  * access_session_id
    user_id
    session_id
    session_meta_json
    expires_at
    last_used_at
    revoked_at
}

entity "reservation_tables" as reservation_tables {
  * reservation_table_id
    reservation_id
    table_id
}

entity "table_hold_details" as table_hold_details {
  * hold_detail_id
    hold_id
    table_id
}

reservations ||--o{ reservation_tables : reservation_id
restaurant_tables ||--o{ reservation_tables : table_id
users ||--o{ customer_access_sessions : user_id
table_holds ||--o{ table_hold_details : hold_id
restaurant_tables ||--o{ table_hold_details : table_id
branches ||--o{ waiting_list : branch_id
users |o--o{ waiting_list : notified_by
users |o--o{ waiting_list : updated_by
users |o--o{ waiting_list : user_id
branches ||--o{ restaurant_tables : branch_id
@enduml





